--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-    <h1>Formulario De Compra de Pasaje</h1>
+    <h1>Formulario De Compra de PASAJE</h1>
     <form id="ingreso-pasajero">
         <div class="mb-3">
             <label for="nombre" class="form-label">Nombre:</label>
