--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="UFT-8"> 
+    <meta http-equiv="X-AU-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script type="text/javascript" scr="galeria.js"></script>
     <title>AirLine BB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
@@ -31,6 +34,11 @@
         <button type="submit" class="btn btn-primary mb-3">Cargar Datos</button>
 
     <p id="mensaje-error"></p>
+
+    <h3>"Algunos lugares para conocer"</h3>
+
+    <video width="420" height="340" src="img/paisajes_increíble.mp4" autoplay loop controls></video>
+
     <table id="tabla" class="table">
         <tr>
         <th>Nombre</th>
