se carga trabaja final

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
             <input type="number" class="form-control" id="edad" required>
         </div>
         <div class="mb-3">
+            <label for="destino" class="form-label">Destino:</label>
+            <select class="form-select form-select" id="destino" required aria-atomic="Default select example"></select>
+        </div>
+        <div class="mb-3">
             <label for="dni" class="form-label">DNI:</label>
-            <input type="text" class="form-control" id="dni" required>
+            <input type="number" class="form-control" id="dni" required>
         </div>
         <button type="submit" class="btn btn-primary mb-3">Cargar Datos</button>
 
@@ -44,12 +48,18 @@
         <th>Nombre</th>
         <th>Apellido</th>
         <th>Edad</th>
+        <th>Destino</th>
         <th>DNI</th>
         <th>Accion</th>
         </tr>
     </table>
-    </div><div>
+
+    <p id="mensaje-espera" hidden>Esperando respuesta del servidor.....</p>
+    
     </div>
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/Pasajero.js"></script>
     <script src="./js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
